--- a/SimilarWebTest/SimilarWebTest/Modules/Unsplash/Base.lproj/Unsplash.storyboard
+++ b/SimilarWebTest/SimilarWebTest/Modules/Unsplash/Base.lproj/Unsplash.storyboard
@@ -142,56 +142,73 @@ If you read it until here, congratulations! If you liked the post and by any cha
             </objects>
             <point key="canvasLocation" x="1104.6728971962616" y="575.37796976241907"/>
         </scene>
-        <!--Unsplash Search-->
+        <!--Unsplash-->
         <scene sceneID="Ubi-PT-0pB">
             <objects>
-                <tableViewController clearsSelectionOnViewWillAppear="NO" id="PGJ-rA-09d" customClass="UnsplashSearchTableViewController" customModule="SimilarWebTest" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="JOG-CI-nx7">
+                <tableViewController id="PGJ-rA-09d" customClass="UnsplashSearchTableViewController" customModule="SimilarWebTest" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" id="JOG-CI-nx7">
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <sections>
-                            <tableViewSection id="GO7-4H-oY7">
-                                <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="d6e-fV-4y9">
-                                        <rect key="frame" x="0.0" y="28" width="428" height="100"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="d6e-fV-4y9" id="ReM-0d-Vn0">
-                                            <rect key="frame" x="0.0" y="0.0" width="396.66666666666669" height="100"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <segue destination="tSn-T0-j4R" kind="showDetail" id="B5y-p6-erf">
-                                                <segue key="commit" inheritsFrom="parent" id="5xf-gd-BEH"/>
-                                                <segue key="preview" inheritsFrom="commit" id="HBO-cV-Aya"/>
-                                            </segue>
-                                        </connections>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="wm8-dp-Skf">
-                                        <rect key="frame" x="0.0" y="128" width="428" height="100"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wm8-dp-Skf" id="Fbd-w2-Eek">
-                                            <rect key="frame" x="0.0" y="0.0" width="408.66666666666669" height="100"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="K6B-cl-SpG">
-                                        <rect key="frame" x="0.0" y="228" width="428" height="100"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="K6B-cl-SpG" id="ZpY-Ym-Ox3">
-                                            <rect key="frame" x="0.0" y="0.0" width="396.66666666666669" height="100"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </cells>
-                            </tableViewSection>
-                        </sections>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="default" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="UnsplashSearchTableViewCell" rowHeight="100" id="5Bk-mA-TS9" customClass="UnsplashSearchTableViewCell" customModule="SimilarWebTest" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="428" height="100"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5Bk-mA-TS9" id="yki-8M-9xu">
+                                    <rect key="frame" x="0.0" y="0.0" width="396.66666666666669" height="100"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="h56-re-uQL">
+                                            <rect key="frame" x="20" y="20" width="60" height="60"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="h56-re-uQL" secondAttribute="height" multiplier="1:1" id="Q6m-Hc-8h9"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UdU-Mb-mHK">
+                                            <rect key="frame" x="88" y="20" width="87.333333333333314" height="20.333333333333329"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="h56-re-uQL" firstAttribute="centerY" secondItem="yki-8M-9xu" secondAttribute="centerY" id="8Mn-aH-i2c"/>
+                                        <constraint firstItem="UdU-Mb-mHK" firstAttribute="leading" secondItem="h56-re-uQL" secondAttribute="trailing" constant="8" symbolic="YES" id="TyQ-3k-D0v"/>
+                                        <constraint firstItem="UdU-Mb-mHK" firstAttribute="top" secondItem="h56-re-uQL" secondAttribute="top" id="gx9-Sb-y4V"/>
+                                        <constraint firstItem="h56-re-uQL" firstAttribute="top" secondItem="yki-8M-9xu" secondAttribute="top" constant="20" symbolic="YES" id="j19-F2-GVr"/>
+                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="UdU-Mb-mHK" secondAttribute="trailing" constant="20" symbolic="YES" id="pef-sE-p7U"/>
+                                        <constraint firstItem="h56-re-uQL" firstAttribute="leading" secondItem="yki-8M-9xu" secondAttribute="leading" constant="20" symbolic="YES" id="pwN-Pb-dFv"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="descriptionLabel" destination="UdU-Mb-mHK" id="5uD-2R-XV3"/>
+                                    <outlet property="unsplashImageView" destination="h56-re-uQL" id="kYE-RC-lBd"/>
+                                    <segue destination="tSn-T0-j4R" kind="showDetail" identifier="showDetailsSegue" id="veq-Ua-lB9">
+                                        <segue key="commit" inheritsFrom="parent" id="vb4-bf-G8H"/>
+                                        <segue key="preview" inheritsFrom="commit" id="ghS-qt-MLc"/>
+                                    </segue>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <sections/>
                         <connections>
                             <outlet property="dataSource" destination="PGJ-rA-09d" id="K95-KT-V3x"/>
                             <outlet property="delegate" destination="PGJ-rA-09d" id="5k5-GO-L4k"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Unsplash Search" id="v4s-VX-gC8"/>
+                    <navigationItem key="navigationItem" title="Unsplash" id="huu-Nj-Y0s"/>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="W2B-Yw-bpi">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <attributedString key="attributedTitle">
+                            <fragment content="Loading...">
+                                <attributes>
+                                    <font key="NSFont" metaFont="toolTip"/>
+                                    <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                </attributes>
+                            </fragment>
+                        </attributedString>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uzg-XF-ocD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -206,7 +223,7 @@ If you read it until here, congratulations! If you liked the post and by any cha
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="PGJ-rA-09d" kind="relationship" relationship="rootViewController" id="I9N-uo-dFD"/>
+                        <segue destination="PGJ-rA-09d" kind="relationship" relationship="rootViewController" id="iQs-e4-ipA"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ElQ-nO-rbk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -218,7 +235,6 @@ If you read it until here, congratulations! If you liked the post and by any cha
             <objects>
                 <splitViewController presentsWithGesture="NO" id="WGl-Nx-LNR" customClass="PrimarySplitViewController" customModule="SimilarWebTest" customModuleProvider="target" sceneMemberID="viewController">
                     <connections>
-                        <segue destination="cSl-r2-Xig" kind="relationship" relationship="masterViewController" id="50m-ox-KNK"/>
                         <segue destination="tSn-T0-j4R" kind="relationship" relationship="detailViewController" id="wEF-d9-4dP"/>
                     </connections>
                 </splitViewController>
@@ -247,7 +263,7 @@ If you read it until here, congratulations! If you liked the post and by any cha
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="wEF-d9-4dP"/>
+        <segue reference="veq-Ua-lB9"/>
     </inferredMetricsTieBreakers>
     <resources>
         <systemColor name="secondaryLabelColor">
