--- a/SimilarWebTest/SimilarWebTest/Modules/Unsplash/Base.lproj/Unsplash.storyboard
+++ b/SimilarWebTest/SimilarWebTest/Modules/Unsplash/Base.lproj/Unsplash.storyboard
@@ -14,7 +14,7 @@
         <scene sceneID="fDw-a2-pnJ">
             <objects>
                 <tableViewController id="r3s-EX-2uS" customClass="UnsplashSearchTableViewController" customModule="SimilarWebTest" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="100" sectionHeaderHeight="80" sectionFooterHeight="40" id="iLv-K5-OKh">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="100" sectionHeaderHeight="60" sectionFooterHeight="40" id="iLv-K5-OKh">
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <view key="tableFooterView" contentMode="scaleToFill" id="lkb-lp-LnQ">
@@ -31,13 +31,13 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZIb-jf-Sou">
-                                            <rect key="frame" x="20" y="20" width="60" height="60"/>
+                                            <rect key="frame" x="20" y="4" width="92" height="92"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="ZIb-jf-Sou" secondAttribute="height" multiplier="1:1" id="t0R-0a-zZH"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z8e-kG-cAS">
-                                            <rect key="frame" x="88" y="20" width="87.333333333333314" height="20.333333333333329"/>
+                                            <rect key="frame" x="120" y="20" width="87.333333333333314" height="20.333333333333329"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -47,9 +47,9 @@
                                         <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="z8e-kG-cAS" secondAttribute="trailing" constant="20" symbolic="YES" id="0ML-uV-Gaw"/>
                                         <constraint firstItem="ZIb-jf-Sou" firstAttribute="centerY" secondItem="haR-BT-bWY" secondAttribute="centerY" id="1Ap-Mv-Si7"/>
                                         <constraint firstItem="z8e-kG-cAS" firstAttribute="leading" secondItem="ZIb-jf-Sou" secondAttribute="trailing" constant="8" symbolic="YES" id="V6s-B8-RPO"/>
+                                        <constraint firstItem="z8e-kG-cAS" firstAttribute="top" secondItem="haR-BT-bWY" secondAttribute="top" constant="20" symbolic="YES" id="lTn-Zh-nzN"/>
                                         <constraint firstItem="ZIb-jf-Sou" firstAttribute="leading" secondItem="haR-BT-bWY" secondAttribute="leading" constant="20" symbolic="YES" id="n7Q-bY-mXM"/>
-                                        <constraint firstItem="z8e-kG-cAS" firstAttribute="top" secondItem="ZIb-jf-Sou" secondAttribute="top" id="rgt-Ti-q5h"/>
-                                        <constraint firstItem="ZIb-jf-Sou" firstAttribute="top" secondItem="haR-BT-bWY" secondAttribute="top" constant="20" symbolic="YES" id="vpF-0f-Fr6"/>
+                                        <constraint firstItem="ZIb-jf-Sou" firstAttribute="top" secondItem="haR-BT-bWY" secondAttribute="top" constant="4" id="vpF-0f-Fr6"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -238,7 +238,7 @@
                         <color key="tintColor" systemColor="labelColor"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="r3s-EX-2uS" kind="relationship" relationship="rootViewController" id="XlK-h9-ljh"/>
+                        <segue destination="r3s-EX-2uS" kind="relationship" relationship="rootViewController" id="NJ8-L6-qpL"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ElQ-nO-rbk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
